# Reader

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.bundled  LICENSE  Makefile  README.md  commitlint.config.js  docker-base-image-policy.yml  docker-compose.yml  docker-entrypoint.sh
server/: .dockerignore  .env.example  .gitignore  alembic.ini  pyproject.toml
server/alembic/: README.md  env.py
server/alembic/baseline/: 000_schemas.sql  010_helpers.sql  020_accounts.sql  030_content.sql  040_personalization.sql  050_management.sql  060_security.sql
server/alembic/versions/: 20260108-103414_2c8c7fe8873e_baseline.py
server/backend/: __init__.py  main.py
server/backend/application/article/: __init__.py  article.py
server/backend/application/auth/: __init__.py  auth.py
server/backend/application/discovery/: __init__.py  discovery.py
server/backend/application/feed/: __init__.py  feed.py
server/backend/application/folder/: __init__.py  folders.py
server/backend/application/job/: __init__.py  job.py
server/backend/application/notification/: __init__.py  notification.py
server/backend/application/opml/: __init__.py  opml.py
server/backend/application/search/: search.py
server/backend/application/tag/: __init__.py  tag.py
server/backend/application/user/: __init__.py  preferences.py
server/backend/cli/: __main__.py  reset_password.py
server/backend/core/: __init__.py  app.py  database.py  dependencies.py  exceptions.py  fastapi.py  lifecycle.py  logging.py
server/backend/domain/: __init__.py  constants.py  enums.py
server/backend/domain/article/: __init__.py  article.py
server/backend/domain/auth/: __init__.py  auth.py  exceptions.py  validation.py
server/backend/domain/feed/: __init__.py  feed.py
server/backend/domain/folder/: __init__.py  validation.py
server/backend/domain/opml/: __init__.py  parser.py  validation.py
server/backend/infrastructure/: __init__.py
server/backend/middleware/: auth.py
server/backend/models/: __init__.py  article.py  article_source.py  article_tag.py  base.py  feed.py  opml_import.py  user.py  user_article.py  user_feed.py  user_folder.py  user_preferences.py  user_session.py  user_tag.py
server/backend/routers/: __init__.py  article.py  auth.py  discovery.py  feed.py  folder.py  notification.py  opml.py  search.py  tag.py  user.py
server/backend/schemas/: __init__.py  feeds.py
server/backend/utils/: content.py  cursor.py  date_utils.py  media_utils.py  text_processing.py  url_normalizer.py  validators.py
server/backend/workers/: __init__.py  functions.py  settings.py
server/tests/: conftest.py
server/tests/unit/: conftest.py
(+436 files in other folders)
