[build-system]
requires = [ "setuptools>=61.0",]
build-backend = "setuptools.build_meta"

[project]
name = "glanced-reader-server"
version = "0.5.0"
description = "Glanced Reader server"
requires-python = ">=3.13"
dependencies = [ "fastapi>=0.128.2", "uvicorn[standard]>=0.40.0", "sqlalchemy>=2.0.46", "asyncpg>=0.31.0", "greenlet>=3.3.1", "psycopg2-binary>=2.9.11", "pydantic>=2.12.5", "pydantic-settings>=2.12.0", "python-multipart>=0.0.22", "httpx>=0.28.1", "structlog>=25.5.0", "feedparser>=6.0.12", "bleach>=6.3.0", "beautifulsoup4>=4.14.3", "redis>=5.3.1,<6", "sse-starlette>=3.2.0", "arq>=0.27.0", "alembic>=1.18.3", "passlib[bcrypt]>=1.7.4",]

[project.license]
text = "MIT"

[project.optional-dependencies]
dev = [ "ruff>=0.15.0", "mypy>=1.19.1", "types-bleach>=6.3.0.20251115",]
test = [ "pytest>=9.0.2", "pytest-asyncio>=1.3.0", "pytest-cov>=7.0.0",]

[tool.ruff]
line-length = 80
target-version = "py313"
include = [ "**/*.py",]

[tool.mypy]
python_version = "3.13"
files = [ "backend/",]
strict = true
ignore_missing_imports = true
disable_error_code = [ "attr-defined", "arg-type", "assignment", "union-attr", "operator", "misc", "call-arg", "no-any-return",]
plugins = [ "sqlalchemy.ext.mypy.plugin",]
[[tool.mypy.overrides]]
module = "backend.utils.content"
disable_error_code = [ "no-any-return", "no-untyped-def",]

[[tool.mypy.overrides]]
module = "backend.routers.*"
disable_error_code = [ "no-untyped-def", "no-any-return",]

[[tool.mypy.overrides]]
module = "backend.infrastructure.external.redis"
disable_error_code = [ "no-any-return",]

[[tool.mypy.overrides]]
module = "backend.utils.cursor"
disable_error_code = [ "no-any-return",]

[[tool.mypy.overrides]]
module = "backend.domain.tag.validation"
disable_error_code = [ "no-any-return",]

[[tool.mypy.overrides]]
module = "backend.infrastructure.repositories.user_feed"
disable_error_code = [ "no-any-return",]

[tool.ruff.lint]
select = [ "E", "W", "F", "I", "B", "UP", "RET", "PT", "RUF",]
ignore = [ "E501", "B008", "RUF012", "PT001", "PT023",]
extend-unfixable = [ "B",]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
skip-magic-trailing-comma = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [ "tests",]
pythonpath = [ ".",]
addopts = "-v --tb=short"
filterwarnings = [ "ignore::DeprecationWarning", "ignore::RuntimeWarning",]
markers = [ "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",]

[tool.ruff.lint.isort]
known-first-party = [ "backend",]

[tool.setuptools.packages.find]
include = [ "backend*",]
exclude = [ "logs*",]
